fixed the dmenu opening time

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -44,7 +44,8 @@ bindsym $mod+Shift+r reload
 #  Binding Related to D-Menu
 #-----------------------------------------#
 # Open D-menu 
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id dmenu_run
 
 #-----------------------------------------#
 #   Bindings Related to Workspaces
